[feature](selectdb-cloud) Add test framework
* sync point
* build script for unit tests

--- a/cloud/src/common/CMakeLists.txt
+++ b/cloud/src/common/CMakeLists.txt
@@ -6,5 +6,6 @@ set(EXECUTABLE_OUTPUT_PATH "${BUILD_DIR}/src/common")
 
 add_library(Common
     configbase.cpp
+    sync_point.cpp
 )
 # vim: et tw=120 ts=4 sw=4 cc=80:
