[feature](selectdb-cloud) Get tablet/rowset meta from CloudMetaMgr (#454)
* cloud mode macro
* fix clang compile error
* get tablet from CloudMetaMgr
* implement CloudMetaMgr
* fix be compile

--- a/be/CMakeLists.txt
+++ b/be/CMakeLists.txt
@@ -474,6 +474,10 @@ if (WITH_LZO)
     set(CXX_COMMON_FLAGS "${CXX_COMMON_FLAGS} -DDORIS_WITH_LZO")
 endif()
 
+if (CLOUD_MODE)
+    set(CXX_COMMON_FLAGS "${CXX_COMMON_FLAGS} -DCLOUD_MODE")
+endif()
+
 # Enable memory tracker, which allows BE to limit the memory of tasks such as query, load,
 # and compaction,and observe the memory of BE through be_ip:http_port/MemTracker.
 # Adding the option `USE_MEM_TRACKER=OFF sh build.sh` when compiling can turn off the memory tracker,
@@ -635,6 +639,7 @@ set(DORIS_LINK_LIBS
     Webserver
     Geo
     Vec
+    Cloud
     ${WL_END_GROUP}
 )
 
@@ -822,6 +827,7 @@ endif()
 
 add_subdirectory(${SRC_DIR}/util)
 add_subdirectory(${SRC_DIR}/vec)
+add_subdirectory(${SRC_DIR}/cloud)
 
 if (${MAKE_TEST} STREQUAL "ON")
     add_subdirectory(${TEST_DIR})
