--- a/be/src/gen_cpp/CMakeLists.txt
+++ b/be/src/gen_cpp/CMakeLists.txt
@@ -89,6 +89,7 @@ set(SRC_FILES
     #$${GEN_CPP_DIR}/opcode/functions.cc
     #$${GEN_CPP_DIR}/opcode/vector-functions.cc
     #$${GEN_CPP_DIR}/opcode/opcode-registry-init.cc
+    ${GEN_CPP_DIR}/selectdb_cloud.pb.cc
 )
 
 # keep everything in one library, the object files reference 
