[feature](selectdb-cloud) Add key encoding function family (#468)
* Add key encoding function family framework and implement some of them
* Add first keys unit test

--- a/cloud/CMakeLists.txt
+++ b/cloud/CMakeLists.txt
@@ -354,6 +354,7 @@ set(DORIS_LINK_LIBS ${DORIS_LINK_LIBS}
     ${DORIS_DEPENDENCIES}
     SelectdbGen
     Common
+    MetaService
     -static-libstdc++
     -static-libgcc
     -lstdc++fs
