--- a/cloud/test/CMakeLists.txt
+++ b/cloud/test/CMakeLists.txt
@@ -20,7 +20,7 @@ add_executable(doris_txn_test
    doris_txn_test.cpp
 )
 
-message("test dependencies: ${TEST_LINK_LIBS}")
+message("Meta-service test dependencies: ${TEST_LINK_LIBS}")
 target_link_libraries(sync_point_test
     ${TEST_LINK_LIBS}
 )
@@ -36,5 +36,12 @@ target_link_libraries(keys_test
 target_link_libraries(doris_txn_test
     ${TEST_LINK_LIBS} 
 )
+
+install(FILES
+    ${BASE_DIR}/script/run_all_tests.sh
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    GROUP_READ GROUP_WRITE GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE
+    DESTINATION ${BUILD_DIR}/test)
 
 # vim: et tw=120 ts=4 sw=4 cc=80:
