--- a/be/src/cloud/CMakeLists.txt
+++ b/be/src/cloud/CMakeLists.txt
@@ -23,5 +23,6 @@ set(EXECUTABLE_OUTPUT_PATH "${BUILD_DIR}/src/cloud")
   
 add_library(Cloud STATIC
 cloud_meta_mgr.cpp
+cloud_stream_load_executor.cpp
 utils.cpp
 )
