--- a/fe/fe-core/pom.xml
+++ b/fe/fe-core/pom.xml
@@ -834,6 +834,9 @@ under the License.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
+                <configuration>
+                    <useIncrementalCompilation>${full.incremental.build}</useIncrementalCompilation>
+                </configuration>
                 <executions>
                     <!-- first: compile annotation and annotation processor -->
                     <execution>
