[feature](selectdb-cloud) Support fdb for unit test (#532)

--- a/cloud/test/CMakeLists.txt
+++ b/cloud/test/CMakeLists.txt
@@ -33,12 +33,31 @@ target_link_libraries(keys_test
     ${TEST_LINK_LIBS} 
 )
 
+# FDB related tests need to be linked with libfdb_c
+set(FDB_LINKER_FLAGS "-lfdb_c -L${THIRDPARTY_DIR}/lib")
+
 target_link_libraries(doris_txn_test
     ${TEST_LINK_LIBS} 
+    ${FDB_LINKER_FLAGS}
 )
 
 install(FILES
     ${BASE_DIR}/script/run_all_tests.sh
+    ${BASE_DIR}/conf/fdb.cluster
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    GROUP_READ GROUP_WRITE GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE
+    DESTINATION ${BUILD_DIR}/test)
+
+install(FILES
+    ${THIRDPARTY_DIR}/lib/ld-linux-x86-64.so.2
+    ${THIRDPARTY_DIR}/lib/libc.so.6
+    ${THIRDPARTY_DIR}/lib/libdl.so.2
+    ${THIRDPARTY_DIR}/lib/libfdb_c.so
+    ${THIRDPARTY_DIR}/lib/libgcc_s.so.1
+    ${THIRDPARTY_DIR}/lib/libm.so.6
+    ${THIRDPARTY_DIR}/lib/libpthread.so.0
+    ${THIRDPARTY_DIR}/lib/librt.so.1
     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
     GROUP_READ GROUP_WRITE GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE
