[feature](selectdb-cloud) Implement FileCache (#506)

--- a/be/src/io/CMakeLists.txt
+++ b/be/src/io/CMakeLists.txt
@@ -44,6 +44,11 @@ set(IO_FILES
     cache/sub_file_cache.cpp
     cache/whole_file_cache.cpp
     fs/s3_file_writer.cpp
+    cache/file_segment.cpp
+    cache/lru_file_cache.cpp
+    cache/cloud_file_cache.cpp
+    cache/file_cache_factory.cpp
+    fs/cached_remote_file_reader.cpp
 )
 
 add_library(IO STATIC
