[feature](selectdb-cloud) Fix bugs introduced by rebasing
* create table
* SegmentIterator::_init_prefetch_column_pages
* SegmentIterator::_init _range_map

--- a/cloud/CMakeLists.txt
+++ b/cloud/CMakeLists.txt
@@ -446,6 +446,7 @@ install(FILES
 
 install(FILES
     ${BASE_DIR}/conf/fdb.cluster
+    ${BASE_DIR}/conf/meta_service.conf
     DESTINATION ${OUTPUT_DIR}/conf)
 
 install(FILES
