[feature](selectdb-cloud) Implement get_read_version and get_committed_version for FdbTxnKv

--- a/cloud/test/CMakeLists.txt
+++ b/cloud/test/CMakeLists.txt
@@ -20,6 +20,10 @@ add_executable(doris_txn_test
    doris_txn_test.cpp
 )
 
+add_executable(txn_kv_test
+   txn_kv_test.cpp
+)
+
 message("Meta-service test dependencies: ${TEST_LINK_LIBS}")
 target_link_libraries(sync_point_test
     ${TEST_LINK_LIBS}
@@ -37,6 +41,11 @@ target_link_libraries(keys_test
 set(FDB_LINKER_FLAGS "-lfdb_c -L${THIRDPARTY_DIR}/lib")
 
 target_link_libraries(doris_txn_test
+    ${TEST_LINK_LIBS} 
+    ${FDB_LINKER_FLAGS}
+)
+
+target_link_libraries(txn_kv_test
     ${TEST_LINK_LIBS} 
     ${FDB_LINKER_FLAGS}
 )
