[feature](selectdb-cloud) Implement multi instance (#585)
* Add resource manager to manage resources
* Implement cloud_unique_id -> instance auto lookup
* Abstract cluster RPC interface to support multiple operations
* Implement drop cluster
* Change some fields names of cluster
* Treat SQL servers as a special cluster

We can test with following http request

```
 # create instance
curl 'localhost:5000/MetaService/http/create_instance?token=greedisgood9999' -d '{"instance_id":"gavin_instance","name":"my-instance","user_id":"gavin-user-id"}'

 # add compute nodes/cluster
curl 'localhost:5000/MetaService/http/add_cluster?token=greedisgood9999' -d '{
    "instance_id":"gavin_instance",
    "cluster":{
        "type":"COMPUTE",
        "cluster_name":"gavin_cluster_name0",
        "cluster_id":"gavin_cluster_id0",
        "nodes":[
            {
                "cloud_unique_id":"gavin_cloud_unique_id00",
                "ip":"172.26.0.1",
                "heartbeat_port":7102
            }
        ]
    }
}'

 # get cluster
curl 'localhost:5000/MetaService/http/get_cluster?token=greedisgood9999' -d '{"cloud_unique_id": "1", "instance_id":"gavin_instance", "cluster_name":"gavin_cluster_name0"}'

curl 'localhost:5000/MetaService/http/add_cluster?token=greedisgood9999' -d '{
    "instance_id":"gavin_instance",
    "cluster":{
        "type":"COMPUTE",
        "cluster_name":"gavin_cluster_name1",
        "cluster_id":"gavin_cluster_id0",
        "nodes":[
            {
                "cloud_unique_id":"gavin_cloud_unique_id00",
                "ip":"172.26.0.1",
                "heartbeat_port":7102
            }
        ]
    }
}'

curl 'localhost:5000/MetaService/http/drop_cluster?token=greedisgood9999' -d '{
    "instance_id":"gavin_instance",
    "cluster":{
        "type":"COMPUTE",
        "cluster_name":"gavin_cluster_name0",
        "cluster_id":"gavin_cluster_id0",
        "nodes":[ ]
    }
}'
```

--- a/cloud/CMakeLists.txt
+++ b/cloud/CMakeLists.txt
@@ -245,7 +245,7 @@ endif()
 # For any gcc builds:
 #   -g: Enable symbols for profiler tools. Produce debugging information in the operating system’s native formt
 #   -Wno-unused-local-typedefs: Do not warn for local typedefs that are unused.
-set(CXX_GCC_FLAGS "${CXX_GCC_FLAGS} -g -Wno-unused-local-typedefs")
+set(CXX_GCC_FLAGS "${CXX_GCC_FLAGS} -ggdb -Wno-unused-local-typedefs")
 
 if (USE_DWARF)
     set(CXX_GCC_FLAGS "${CXX_GCC_FLAGS} -gdwarf-5")
@@ -414,8 +414,13 @@ endif ()
 
 # Add libs if needed, download to current dir -- ${BUILD_DIR}
 if (NOT EXISTS "ldb_lib.xz")
-    execute_process(COMMAND "curl" "https://justtmp-1308700295.cos.ap-hongkong.myqcloud.com/ldb_lib.xz"
-                            "-o" "ldb_lib.xz" "-k")
+    set(FDB_LIB_URL "https://justtmp-1308700295.cos.ap-hongkong.myqcloud.com/ldb_lib.xz")
+    execute_process(COMMAND "curl" "${FDB_LIB_URL}"
+                            "-o" "ldb_lib.xz" "-k"
+                    RESULTS_VARIABLE DOWNLOAD_RET)
+    if (NOT ${DOWNLOAD_RET} STREQUAL "0")
+        message(FATAL_ERROR "Failed to download dependency of fdb ${FDB_LIB_URL}")
+    endif ()
 endif ()
 # Add fdb dependencies
 if (NOT EXISTS ${THIRDPARTY_DIR}/include/foundationdb)
