[feature](selectdb-cloud) Fix incorrect type alias for encoding (#608)
`std::is_same_v` cannot tell the underlying type alias of different
types, which results in incorrect prefix encoding of keys.

This fix invoke inheritance and template to get rid of the drawback of
type alias.

--- a/cloud/test/CMakeLists.txt
+++ b/cloud/test/CMakeLists.txt
@@ -4,6 +4,8 @@ set(LIBRARY_OUTPUT_PATH "${BUILD_DIR}/test")
 # where to put generated libraries
 set(EXECUTABLE_OUTPUT_PATH "${BUILD_DIR}/test")
 
+set(TEST_LINK_LIBS ${TEST_LINK_LIBS} ResourceManager)
+
 add_executable(sync_point_test
    sync_point_test.cpp
 )
