[feature](selectdb-cloud) Add meta_service.pid and fix get tablet stats
* Generate meta_service.pid when meta_service starts
* Add script stop_meta_service.sh
* Fix missing DoneGuard in get_tablet_stats rpc

--- a/cloud/CMakeLists.txt
+++ b/cloud/CMakeLists.txt
@@ -444,6 +444,7 @@ install(DIRECTORY DESTINATION ${OUTPUT_DIR}/lib)
 
 install(FILES
     ${BASE_DIR}/script/start_meta_service.sh
+    ${BASE_DIR}/script/stop_meta_service.sh
     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
     GROUP_READ GROUP_WRITE GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE
