--- a/be/src/cloud/CMakeLists.txt
+++ b/be/src/cloud/CMakeLists.txt
@@ -25,5 +25,6 @@ add_library(Cloud STATIC
 cloud_meta_mgr.cpp
 cloud_schema_change.cpp
 cloud_stream_load_executor.cpp
+cloud_tablet_mgr.cpp
 utils.cpp
 )
