[feature](selectdb-cloud) Implement MemTxnKv for unit test (#659)
* Mock txnkv(put/get/remove/commit) for unit test
* Mock txnkv(atomic_set/atomic_add) for unit test
* Fix bug of creating std::string from std::string_view

--- a/cloud/test/CMakeLists.txt
+++ b/cloud/test/CMakeLists.txt
@@ -30,6 +30,10 @@ add_executable(recycler_test
    recycler_test.cpp
 )
 
+add_executable(mem_txn_kv_test
+   mem_txn_kv_test.cpp
+)
+
 message("Meta-service test dependencies: ${TEST_LINK_LIBS}")
 target_link_libraries(sync_point_test
     ${TEST_LINK_LIBS}
@@ -43,6 +47,7 @@ target_link_libraries(keys_test
     ${TEST_LINK_LIBS} 
 )
 
+
 # FDB related tests need to be linked with libfdb_c
 set(FDB_LINKER_FLAGS "-lfdb_c -L${THIRDPARTY_DIR}/lib")
 
@@ -53,6 +58,11 @@ target_link_libraries(doris_txn_test
 
 target_link_libraries(txn_kv_test
     ${TEST_LINK_LIBS} 
+    ${FDB_LINKER_FLAGS}
+)
+
+target_link_libraries(mem_txn_kv_test
+    ${TEST_LINK_LIBS}
     ${FDB_LINKER_FLAGS}
 )
 
