[feature](selectdb-cloud) Add tablet job on meta service (#716)
* Add start_tabelt_job() and finish_tablet_job() for compaction
* Add corresponding unit tests
* Add BE implementation

TODO:
* Support abort
* Recycle compaction input rowsets

--- a/cloud/src/meta-service/CMakeLists.txt
+++ b/cloud/src/meta-service/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lfdb_c -L${THIRDPARTY_DIR
 add_library(MetaService
     meta_server.cpp
     meta_service.cpp
+    meta_service_job.cpp
     txn_kv.cpp
     codec.cpp
     keys.cpp
