--- a/fe/pom.xml
+++ b/fe/pom.xml
@@ -24,6 +24,7 @@ under the License.
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
         <version>23</version>
+        <relativePath/>
     </parent>
     <groupId>org.apache.doris</groupId>
     <artifactId>fe</artifactId>
