--- a/be/src/cloud/CMakeLists.txt
+++ b/be/src/cloud/CMakeLists.txt
@@ -22,6 +22,8 @@ set(LIBRARY_OUTPUT_PATH "${BUILD_DIR}/src/cloud")
 set(EXECUTABLE_OUTPUT_PATH "${BUILD_DIR}/src/cloud")
   
 add_library(Cloud STATIC
+cloud_base_compaction.cpp
+cloud_cumulative_compaction.cpp
 cloud_meta_mgr.cpp
 cloud_schema_change.cpp
 cloud_stream_load_executor.cpp
