[feature](selectdb-cloud) Improve file cache and metrics (#737)
1. Support disposable cache for compaction and schema change.
2. Support BE file cache metric report.
3. Support FE metric report by cluster.
4. Support storage cache in prefetch.
5. Fix query about dec limit error.
6. Disable some propertis when table creation.

--- a/be/src/io/CMakeLists.txt
+++ b/be/src/io/CMakeLists.txt
@@ -50,6 +50,7 @@ set(IO_FILES
     cloud/cloud_file_cache.cpp
     cloud/cloud_file_cache_factory.cpp
     cloud/cached_remote_file_reader.cpp
+    cloud/cloud_file_cache_profile.cpp
 )
 
 add_library(IO STATIC
