[feature](selectdb-cloud) Support concurrent schema change and compaction for one tablet (#842)
* Support concurrent schema change and compaction
* Implement tablet job process
* Add already committed rowset to output_rowsets during a schema change
* FE send job_id in AlterTabletReq
* Add unit test for schema change (meta-service side)
* Update tablet stats after committing schema change job
* Update cloud compaction regression test
* Pass BE ut
* Add some log
* Turn on report task workers
* Fix returned stats uninitialized
* Fix incorrect cumulative point of new tablet after schema change
* Do not remove job kv

--- a/cloud/test/CMakeLists.txt
+++ b/cloud/test/CMakeLists.txt
@@ -38,6 +38,10 @@ add_executable(meta_service_test
    meta_service_test.cpp
 )
 
+add_executable(meta_service_job_test
+   meta_service_job_test.cpp
+)
+
 message("Meta-service test dependencies: ${TEST_LINK_LIBS}")
 target_link_libraries(sync_point_test
     ${TEST_LINK_LIBS}
@@ -52,6 +56,10 @@ target_link_libraries(keys_test
 )
 
 target_link_libraries(meta_service_test
+    ${TEST_LINK_LIBS}
+)
+
+target_link_libraries(meta_service_job_test
     ${TEST_LINK_LIBS}
 )
 
