pick selectdb-cloud-dev-semi pr 851, 926 (#933)
* [Feature-WIP](inverted) add inverted index compaction implementation (#851)

* [Feature-WIP](inverted) add inverted index compaction implementation

* [Feature-WIP](inverted) set condition for rowid vec trans

* [Fix](inverted) remove useless function

* [Fix](inverted) seperate compound directory fs and cfs, for cloud mode and other situations

Co-authored-by: airborne12 <airborne08@gmail.com>

--- a/be/src/olap/CMakeLists.txt
+++ b/be/src/olap/CMakeLists.txt
@@ -111,6 +111,7 @@ add_library(Olap STATIC
     rowset/segment_v2/inverted_index_desc.cpp
     rowset/segment_v2/inverted_index_compound_directory.cpp
     rowset/segment_v2/inverted_index_compound_reader.cpp
+    rowset/segment_v2/inverted_index_compaction.cpp
     task/engine_batch_load_task.cpp
     task/engine_checksum_task.cpp
     task/engine_clone_task.cpp
