--- a/regression-test/framework/pom.xml
+++ b/regression-test/framework/pom.xml
@@ -76,6 +76,7 @@ under the License.
         <groovy-eclipse-compiler.version>3.7.0</groovy-eclipse-compiler.version>
         <antlr.version>4.9.3</antlr.version>
         <hadoop.version>2.8.0</hadoop.version>
+        <aws-java-sdk-s3.version>1.11.95</aws-java-sdk-s3.version>
     </properties>
     <build>
         <plugins>
@@ -279,6 +280,11 @@ under the License.
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-mapreduce-client-core</artifactId>
             <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>${aws-java-sdk-s3.version}</version>
         </dependency>
     </dependencies>
 </project>
