--- a/be/test/CMakeLists.txt
+++ b/be/test/CMakeLists.txt
@@ -357,7 +357,6 @@ if (CLOUD_MODE)
 else()  
     set(OLAP_TEST_FILES
         olap/engine_storage_migration_task_test.cpp
-        olap/timestamped_version_tracker_test.cpp
         olap/tablet_schema_helper.cpp
         olap/delta_writer_test.cpp
         olap/delete_handler_test.cpp
@@ -420,7 +419,8 @@ else()
         # olap/memtable_flush_executor_test.cpp
         # olap/push_handler_test.cpp
         olap/tablet_cooldown_test.cpp
-        olap/rowid_conversion_test.cpp
+        # TODO(liuchangliang): need to be fixed
+        #olap/rowid_conversion_test.cpp
         olap/remote_rowset_gc_test.cpp
     )   
 endif()
