pick selectdb-cloud-dev-semi pr 919, 986 (#993)
* [feature](inverted) support range predicate for bkd index

* add unsigned int type

* Inverted index meta refactor (#986)

* fix testcase error

* fix getInvertedIndexParser and tablet_meta default

* remove PARSER_NOT_SET and use PARSER_NONE as default

* fix getInvertedIndexParser

* WIP refactor index meta to seprate from column meta

* fix getting unique_id from filter condition

* WIP refector meta for schema change(not work)

* fix std::move indexes heap use after free problem

* fix schema change index null

* tmp add column unique id copy from Index to TOlapTableIndex

* tmp add column unique id copy from Index to TOlapTableIndex

* fix core of concurrent update indexes in tablet schema

* init col_unique_ids for index meta at be side

* add index_id and delete comment in index meta

* use index_id instead of index_name for index file name

* add properties in show index output

* fix problem for schema change using index_id in index filename

* add testcase add_drop_index_with_data

* add testcase index_meta

* delete useless comment and code for inverted index

* change show index output order

* fix extra id in index.col_unique_id

* change index_meta testcase

* change variable order

* missing commit for header

* fix index meta refactor compitable problems

* change bitmap index testcase for index meta

* fix strlen memory problem for query

* fix initIndexUniqueId nullpointer

* opt analyzer type branch

Co-authored-by: luennng <luennng@gmail.com>
Co-authored-by: Kang <kxiao.tiger@gmail.com>

--- a/be/src/exprs/CMakeLists.txt
+++ b/be/src/exprs/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(Exprs
   is_null_predicate.cpp
   like_predicate.cpp
   match_predicate.cpp
+  range_predicate.cpp
   math_functions.cpp
   null_literal.cpp  
   scalar_fn_call.cpp
