[feature](selectdb-cloud) Use absolute expiration time for recycling (#950)
* Use absolute expiration time for recycling
* Improve log content
* BE set txn expiration time
* FE set expiration time
* Recycle tablet idx, stats, job keys
* Remove create_tablet rpc
* Remove debug code
* Update config

--- a/cloud/conf/selectdb_cloud.conf
+++ b/cloud/conf/selectdb_cloud.conf
@@ -21,9 +21,7 @@ log_immediate_flush = false
 # log_verbose_modules = *
 
 # // recycler config
-recycl_interval_seconds = 3600
-index_retention_seconds = 172800
-partition_retention_seconds = 86400
-rowset_retention_seconds = 10800
+recycle_interval_seconds = 3600
+retention_seconds = 259200
 recycle_concurrency = 16
 recycle_standalone_mode = false
