--- a/cloud/conf/selectdb_cloud.conf
+++ b/cloud/conf/selectdb_cloud.conf
@@ -25,3 +25,6 @@ recycle_interval_seconds = 3600
 retention_seconds = 259200
 recycle_concurrency = 16
 recycle_standalone_mode = false
+
+# //max stage num
+max_num_stages = 40
